--- a/first_code.html
+++ b/first_code.html
@@ -27,6 +27,7 @@
         <li>Rice</li>
         <li>Beans</li>
         <li>Garri</li>
+        <li>Potato</li>
     </ul>
     <hr>
     <h2>Ordered List</h2>
