update: first_code

--- a/first_code.html
+++ b/first_code.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Page</title>
+    <title>Complex HTML Page</title>
 </head>
 <body>
     <body style="background-color:rgb(232, 232, 255)"
@@ -27,7 +27,6 @@
         <li>Rice</li>
         <li>Beans</li>
         <li>Garri</li>
-        <li>Potato</li>
     </ul>
     <hr>
     <h2>Ordered List</h2>
