--- a/first_code.html
+++ b/first_code.html
@@ -11,7 +11,7 @@
     <h2>MY NAME IS TOLANI</h2>
     <body> this is my first code and both Wole and Victor were present in when i was writing this code. 
         <br> I wrote it at 30CQ, AAUA on the 23rd of July, 2024. </body>
-        <br> and i copied corel draw setup to Komiaya's Phone </body>
+        <br> and i copied corel draw setup to Komiaya's Phone
 
     <pr><i> both Komaiya and Isaac were discussing, Komaiya greeted me good afternoon </i></pr>
     <p>This is a paragraph of text on my simple HTML page.</p>
@@ -20,6 +20,8 @@
     <a href="https://www.example.com">Visit Example.com</a>
     <br> <a href="thetechhighlight.com"> Visit thetechhighlight.com</a>
     <br>
+    <button>Click here to continue</button>
+    
     <img src="github.png" alt="github" width="104" height="102">
     <p style="color:blue" style="font-size:50px"> <b> My Name is Tolani</b></p>
     <br> <h2>Unordered lIst</h2>
